// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineToolTipContent renders correctly against snapshot 1`] = `
<EuiFlexGroup
  gutterSize="none"
  justifyContent="center"
>
  <EuiFlexItem>
    <FlowBadge
      color="hollow"
    >
      <EuiFlexGroupStyled
        direction="column"
      >
        <EuiFlexItem
          grow={false}
        >
          Source
        </EuiFlexItem>
      </EuiFlexGroupStyled>
    </FlowBadge>
  </EuiFlexItem>
  <SourceDestinationArrows
    contextId="contextId"
    destinationBytes={
      Array [
        "testPropValue",
      ]
    }
    eventId="map-line-tooltip-contextId"
    sourceBytes={
      Array [
        "testPropValue",
      ]
    }
  />
  <EuiFlexItem>
    <FlowBadge
      color="hollow"
    >
      <EuiFlexGroupStyled>
        <EuiFlexItem
          grow={false}
        >
          Destination
        </EuiFlexItem>
      </EuiFlexGroupStyled>
    </FlowBadge>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`LineToolTipContent renders correctly against snapshot when rendering client & server 1`] = `
<EuiFlexGroup
  gutterSize="none"
  justifyContent="center"
>
  <EuiFlexItem>
    <FlowBadge
      color="hollow"
    >
      <EuiFlexGroupStyled
        direction="column"
      >
        <EuiFlexItem
          grow={false}
        >
          Client
        </EuiFlexItem>
      </EuiFlexGroupStyled>
    </FlowBadge>
  </EuiFlexItem>
  <SourceDestinationArrows
    contextId="contextId"
    destinationBytes={
      Array [
        "testPropValue",
      ]
    }
    eventId="map-line-tooltip-contextId"
    sourceBytes={
      Array [
        "testPropValue",
      ]
    }
  />
  <EuiFlexItem>
    <FlowBadge
      color="hollow"
    >
      <EuiFlexGroupStyled>
        <EuiFlexItem
          grow={false}
        >
          Server
        </EuiFlexItem>
      </EuiFlexGroupStyled>
    </FlowBadge>
  </EuiFlexItem>
</EuiFlexGroup>
`;
